--- a/products/header.html
+++ b/products/header.html
@@ -58,7 +58,7 @@
     <link rel="stylesheet" href="{% static "assets/css/lunar.css" %}">   
     <link
     rel="stylesheet"
-    href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    href="https://unpkg.com/swiper@9.2.4/swiper-bundle.min.css"
   />
 
     
@@ -142,7 +142,7 @@
                                 <div class="products">
                                     <div class="product product-cart">
                                         <div class="product-detail">
-                                            <a href="categorypage.html" class="product-name">Beige knitted
+                                            <a # class="product-name">Beige knitted
                                                 elas<br>tic
                                                 runner shoes</a>
                                             <div class="price-box">
@@ -151,7 +151,7 @@
                                             </div>
                                         </div>
                                         <figure class="product-media">
-                                            <a href="categorypage.html">
+                                            <a href="#">
                                                 <img src="assets/images/cart/product-1.jpg" alt="product" height="84"
                                                     width="94" />
                                             </a>
@@ -163,7 +163,7 @@
 
                                     <div class="product product-cart">
                                         <div class="product-detail">
-                                            <a href="categorypage.html" class="product-name">Blue utility
+                                            <a # class="product-name">Blue utility
                                                 pina<br>fore
                                                 denim dress</a>
                                             <div class="price-box">
@@ -172,7 +172,7 @@
                                             </div>
                                         </div>
                                         <figure class="product-media">
-                                            <a href="categorypage.html">
+                                            <a href="#">
                                                 <img src="assets/images/cart/product-2.jpg" alt="product" width="84"
                                                     height="94" />
                                             </a>
@@ -189,8 +189,8 @@
                                 </div>
 
                                 <div class="cart-action">
-                                    <a href="cart.html" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-primary  btn-rounded">Checkout</a>
+                                    <a href="#" class="btn btn-dark btn-outline btn-rounded">View Cart</a>
+                                    <a href="#" class="btn btn-primary  btn-rounded">Checkout</a>
                                 </div>
                             </div-->
                             <!-- End of Dropdown Box -->
@@ -224,7 +224,7 @@
                                         {% for cat in nav_categories %}
 
                                         <li>
-                                            <a href="shop-fullwidth-banner.html">
+                                            <a href="#">
                                                {{cat}}
                                             </a>
                                             <ul class="megamenu">
@@ -234,17 +234,17 @@
                                                     <h4 class="menu-title">{{sub}}</h4>
                                                     <hr class="divider">
                                                     <ul>
-                                                        <li><a href="shop-fullwidth-banner.html">New Arrivals</a>
+                                                        <li><a href="#">New Arrivals</a>
                                                         </li>
-                                                        <li><a href="shop-fullwidth-banner.html">Best Sellers</a>
+                                                        <li><a href="#">Best Sellers</a>
                                                         </li>
-                                                        <li><a href="shop-fullwidth-banner.html">Trending</a></li>
-                                                        <li><a href="shop-fullwidth-banner.html">Clothing</a></li>
-                                                        <li><a href="shop-fullwidth-banner.html">Shoes</a></li>
-                                                        <li><a href="shop-fullwidth-banner.html">Bags</a></li>
-                                                        <li><a href="shop-fullwidth-banner.html">Accessories</a>
+                                                        <li><a href="#">Trending</a></li>
+                                                        <li><a href="#">Clothing</a></li>
+                                                        <li><a href="#">Shoes</a></li>
+                                                        <li><a href="#">Bags</a></li>
+                                                        <li><a href="#">Accessories</a>
                                                         </li>
-                                                        <li><a href="shop-fullwidth-banner.html">Jewlery &
+                                                        <li><a href="#">Jewlery &
                                                                 Watches</a></li>
                                                     </ul>
                                                 </li>
@@ -262,7 +262,7 @@
                                                                     class="text-primary text-uppercase">20%Off</strong>
                                                             </div>
                                                             <h3 class="banner-title ls-normal">Hot Sales</h3>
-                                                            <a href="shop-banner-sidebar.html"
+                                                            <a href="/"
                                                                 class="btn btn-dark btn-sm btn-link btn-slide-right btn-icon-right">
                                                                 Shop Now<i class="w-icon-long-arrow-right"></i>
                                                             </a>
@@ -275,7 +275,7 @@
 
                                         {% endfor %}
                                         <!--li>
-                                            <a href="shop-banner-sidebar.html"
+                                            <a href="/"
                                                 class="font-weight-bold text-primary text-uppercase ls-25">
                                                 View All Categories<i class="w-icon-angle-right"></i>
                                             </a>
